--- a/lessons-alpha/static-equilibrium/index.html
+++ b/lessons-alpha/static-equilibrium/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Static Equilibrium | CT3OS</title>
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="icon" type="image/png" href="../../favicon.png">
+</head>
 <body>
 
-<p>The code element does not preserve whitespace and line-breaks.</p>
-<p>To fix this, you can put the code element inside a pre element:</p>
-
-<pre>
-<code>
-x = 5;
-y = 6;
-z = x + y;
-</code>
-</pre>
+<h1 title="ID: 00002">Static Equilibrium</h1>
+<h6>This is for math</h6>
+<p>This is for text.</p>
 
 </body>
 </html>
