--- a/lessons-alpha/static-equilibrium/index.html
+++ b/lessons-alpha/static-equilibrium/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Static Equilibrium | CT3OS</title>
-    <link rel="stylesheet" href="../../styles.css">
-    <link rel="icon" type="image/png" href="../../favicon.png">
-</head>
-<body>
+    <head>
+        <title>###NAME### | CT3OS</title>
+        <link rel="stylesheet" href="../../styles.css">
+        <link rel="icon" type="image/png" href="../../favicon.png">
+    </head>
+    <body>
+        <div class="info">
+            <h1 id="title";>###TITLE###</h1>
+            <p>ID: #####&nbsp;&nbsp;&nbsp;LM: YYYYMMMDD</p>
+        </div>
 
-<h1 title="ID: 00002">Static Equilibrium</h1>
-<h6>This is for math</h6>
-<p>This is for text.</p>
+        
+        <h6>
+            This is for math
+        </h6>
+        <p>
+            This is for text.
+        </p>
 
-</body>
+    </body>
 </html>
