--- a/lessons-alpha/control-volumes/index.html
+++ b/lessons-alpha/control-volumes/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Control Volumes | CT3OS</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../styles.css">
         <link rel="icon" type="image/png" href="../../favicon.png">
     </head>
