Formatting and creating lessons

--- a/lessons-alpha/00002-static-equilibrium-coincident-forces/index.html
+++ b/lessons-alpha/00002-static-equilibrium-coincident-forces/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>###NAME### | CT3OS</title>
+        <title>Static Equilibrium - Coincident Forces | CT3OS</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../styles.css">
         <link rel="icon" type="image/png" href="../../favicon.png">
-        <script src="problems.js"></script> 
+        <script src="problems.js"></script>
+        <script src="../../format.js"></script>
     </head>
     <!--
     h1 is title
@@ -17,26 +18,25 @@
     -->
     <body>
         <div class="top" id="top">
-            <h1 id="title";>###TITLE###</h1>
-            <p>ID: #####&nbsp;&nbsp;&nbsp;LM: YYYYMMMDD</p>
-            <p>Seen in: ###SUBJECT NAME###</p>
+            <h1 id="title">Static Equilibrium for Coincident Forces</h1>
+            <h2 style="text-transform: none; margin-top: 0px;">Seen in: Statics</h2>
+            <p>ID: 00002&nbsp;&nbsp;&nbsp;LM: 2025JUN01</p>
         </div>
         <button class="toTop" onclick="document.location='#top'">
             <p style = "font-size: 24px;">&#x2BC5;</p>
-            <p style = "font-size: 12px;">Top</p>
+            <p style = "font-size: 12px;"><strong>Top</strong></p>
         </button>
         <button class="goBack" onclick="document.location='../index.md'">
             <p style = "font-size: 24px;">&#x2BC7;</p>
             <p style = "font-size: 12px;"><strong>Back</strong></p>
         </button>
-
         <noscript>This site may use JavaScript to display some example problems. 
         Please be aware that they may not work in your browser.</noscript>
 
+        
         <h6>
             This is for math
         </h6>
-        <h2 id="###SUBHEADINGNAME###"><a class="head" href="# ###SUBHEADINGNAME###">###SUBHEADING###</a></h2>
         <p>
             This is for text.
         </p>
